<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#050B18"
    tools:context=".LoginActivity" >


    <TextView
        android:id="@+id/loginView"
        android:layout_width="201dp"
        android:layout_height="37dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/jetbrains_mono_bold"
        android:text="@string/auth"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_edit"
        android:ems="10"
        android:fontFamily="@font/jetbrains_mono_bold"
        android:hint="@string/emailOrLogin"
        android:inputType="textEmailAddress"
        android:outlineAmbientShadowColor="@color/grey"
        android:outlineSpotShadowColor="@color/grey"
        android:paddingStart="13dp"
        android:shadowColor="@color/grey"
        android:textColor="@color/lightGray"
        android:textColorHighlight="@color/lightGray"
        android:textColorHint="@color/lightGray"
        android:textColorLink="@color/lightGray"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginView" />

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="28dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_edit"
        android:ems="10"
        android:fontFamily="@font/jetbrains_mono_bold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:outlineAmbientShadowColor="@color/grey"
        android:outlineSpotShadowColor="@color/grey"
        android:paddingStart="13dp"
        android:shadowColor="@color/grey"
        android:textColor="@color/lightGray"
        android:textColorHighlight="@color/lightGray"
        android:textColorHint="@color/lightGray"
        android:textColorLink="@color/lightGray"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEdit"
        app:layout_constraintHorizontal_bias="0.5"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button"
        android:fontFamily="@font/jetbrains_mono_bold"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdit"
        app:layout_constraintVertical_bias="0.283" />

    <TextView
        android:id="@+id/notView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jetbrains_mono_bold"
        android:text="@string/notProfile"
        android:textColor="@color/lightGray"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/createView"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintVertical_bias="0.51" />

    <TextView
        android:id="@+id/createView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="63dp"
        android:fontFamily="@font/jetbrains_mono_bold"
        android:text="@string/createProfile"
        android:textColor="@color/yellow"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintVertical_bias="0.51" />
</androidx.constraintlayout.widget.ConstraintLayout>